--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section>
         <h3>Formación</h3>
         <ul>
-            <li>Licencido en Sociología de la Universidad de Chile</li>
+            <li>Licenciado en Sociología de la Universidad de Chile</li>
             <li>Bachiller con mención en Humanidades y Ciencias Sociales del Programa Académico de Bachillerato de la Universidad de Chile</li>
         </ul>
     </section>    
